firmware-nonfree (0.8) UNRELEASED; urgency=low

  * Applying patch from Ben Hutchings <ben@decadent.org.uk> to update
    gencontrol.py for linux-support-2.6.22-3.

 -- Daniel Baumann <daniel@debian.org>  Mon, 26 Nov 2007 15:58:00 +0100

firmware-nonfree (0.7) unstable; urgency=low

  * Set section to non-free/admin.
  * Added iwl3945 firwmare, version 2.14.1.5,
    Added iwl4965 firmware, version 4.44.1.18. (closes: #435304)

 -- Bastian Blank <waldi@debian.org>  Thu, 02 Aug 2007 10:09:19 +0200

firmware-nonfree (0.6) unstable; urgency=low

  * Drop Daniel from Uploaders.
  * Add content lists. (closes: #393469)
  * Update qlogic firmwares.
  * Merge iwl3945 and iwl4965 into iwlwifi.

 -- Bastian Blank <waldi@debian.org>  Tue, 10 Jul 2007 22:52:06 +0200

firmware-nonfree (0.5) unstable; urgency=low

  * Building against 2.6.21-2.
  * Added myself to uploaders.
  * Updated ipw3945.ucode to version 1.14.2.
  * Added iwl3945 firwmare, version 2.14.4.
  * Added iwl4965 firmware, version 4.44.15.

 -- Daniel Baumann <daniel@debian.org>  Thu,  5 Jul 2007 01:16:00 +0100

firmware-nonfree (0.4) unstable; urgency=low

  * Build-depend on linux-support-2.6.18-4; closes: #414773.
  * Add myself to uploaders.

 -- Steve Langasek <vorlon@debian.org>  Wed, 14 Mar 2007 03:32:31 -0700

firmware-nonfree (0.3) unstable; urgency=low

  * Rename qlogic initramfs-tools hook, closes: #386175
  * Make initramfs-tools hooks executable, closes: #386172
  * Bump standars to 3.7.2, no changes required.

 -- Frederik Schüler <fs@debian.org>  Wed,  6 Sep 2006 11:10:29 +0200

firmware-nonfree (0.2) unstable; urgency=low

  * Release into unstable.
  * Build-depend on linux-support-2.6.17-2.

 -- Frederik Schüler <fs@debian.org>  Tue,  5 Sep 2006 17:36:33 +0200

firmware-nonfree (0.1) experimental; urgency=low

  [ Frederik Schüler ]
  * Initial release.

 -- Bastian Blank <waldi@debian.org>  Fri,  2 Jun 2006 22:19:21 +0200